fix: made result table responsive by adding overflow x auto

--- a/frontend/css/result-section.css
+++ b/frontend/css/result-section.css
@@ -555,6 +555,7 @@ meter::-moz-meter-bar {
         display: flex;
         gap: 8px;
         flex-direction: column;
+        overflow-x: auto;
       }
 
       h5 {
